2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	Version 043

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOES: Updated.

2011-11-23  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (remove_hash_bang_line): Recognize multiple
	syntax possibilities. A hash bang could be buried in a (text ...)
	compound, or it could just be a string (thanks to the text form
	optimization).

2011-11-23  Kaz Kylheku  <kaz@kylheku.com>

	Optimization: if all the elements of (text ...) are
	strings, then replace the (text ...) by the catenation
	of those strings.

	* parser.y (optimize_text): New function.
	(elem): Use optimize_text.

2011-11-23  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (plus, minus): Fixed wrong assertion which would incorrectly
	fire for inputs that do not overflow.

	* match.c (search_form): Fixed incorrect loop test which could
	lead to nonterminating behavior.

	* RELNOTES: Updated.

2011-11-23  Kaz Kylheku  <kaz@kylheku.com>

	Semantics change. If a variable is followed by a mixture
	of text and regular expressions, that whole mixture is
	considered to follow the variable and used for matching.

	The earlier semantics change whereby a single unescaped
	space denotes the regular expression / +/ broke the
	simple case   @a word.   It caused the @a to be followed
	not by the text " word"  but by just the regular expression
	element.

	With this change @a word means that a is followed by 
	the regex / +/ and "word".

	* match.c (text_s): New symbol variable.
	(h_text): New function.
	(syms_init): Initialize new symbol variable.
	(dir_tables_init): Hook h_text into horizontal directives table.

	* match.h (text_s): Declared.

	* parser.y (text, texts): New nonterminals.
	(elem): TEXT, SPACE and regex are now handled under texts
	grammar production. All texts are run together and produce
	an item which looks like (text items ...).

	* txr.1, RELNOTES: Updated.
