@@ -1,3 +1,10 @@
+2011-11-24  Kaz Kylheku  <kaz@kylheku.com>
+
+	* parser.y (texts, elem): Fixed incorrect use of rl rather
+	than rlcp.  Added forgotten rlcp on result of optimize_text.
+
+	* RELNOTES: Updated.
+
 2011-11-20  Kaz Kylheku  <kaz@kylheku.com>
 
 	Version 043
